5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1578_1327.log
== SUBMITION (2019-03-11 21:49:22) 
-- CODE:
print 90-55
-- EXECUTION TIME:
0.190183
-- ERROR:
  File "/home/codebench/codes/1578/1327/main.py", line 1
    print 90-55
           ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 21:49:41) 
-- CODE:
print(90-55)
-- EXECUTION TIME:
0.164733
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
